<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="mdsadabwasimcom.quizup.MainActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/question_africa"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <Button
        android:id="@+id/true_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView"
        android:layout_marginStart="64dp"
        android:background="#4CAF50"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/true1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="200dp"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/false_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"


        android:layout_alignBaseline="@+id/true_button"
        android:layout_alignBottom="@+id/true_button"

        android:layout_alignEnd="@+id/textView"
        android:layout_marginEnd="45dp"
        android:background="#B71C1C"
        android:text="@string/false1"

        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="200dp"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageButton
        android:id="@+id/next_button"
        android:layout_width="80dp"
        android:layout_height="52dp"

        android:layout_alignStart="@+id/false_button"
        android:layout_below="@+id/false_button"
        android:src="@drawable/next_button"
        android:layout_marginEnd="64dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="150dp"/>

    <ImageButton
        android:id="@+id/prev_button"
        android:layout_width="80dp"
        android:layout_height="52dp"
        android:layout_alignBottom="@+id/next_button"
        android:layout_alignEnd="@+id/true_button"
        android:src="@drawable/prev"
        android:layout_marginStart="64dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="150dp"/>

    <Button
        android:id="@+id/cheat_buttton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/cheat_button"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="32dp"
        android:layout_marginStart="150dp"
        app:layout_constraintLeft_toLeftOf="parent"/>

</android.support.constraint.ConstraintLayout>


